add header tablet

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -4,7 +4,7 @@
       <nav class="hero-header__nav">
         <a class="link" href="./index.html">
           <img
-            class=""
+            class="logo"
             src="./images/logo/logo-icecream.png"
             alt="icecream"
             width=""
@@ -28,6 +28,15 @@
               href="./images/icon/svg-all.svg#icon-close-menu"
             ></use>
           </svg>
+        </button>
+
+        <button class="nav-button" type="submit">
+          <span class="nav-button__wrapper">
+            <span class="nav-button__txt">Buy now</span>
+            <svg class="nav-button__icon">
+              <use href="./images/icon/svg-all.svg#icon-btn-arrow"></use>
+            </svg>
+          </span>
         </button>
 
         <!--мобільне мєню-->
@@ -69,7 +78,9 @@
             </h1>
             <ul class="hero-header__list-btn">
               <li class="hero-header__item-btn">
-                <a href="#products" class="hero-header__button hero-header__button--red"
+                <a
+                  href="#products"
+                  class="hero-header__button hero-header__button--red"
                   >Products</a
                 >
               </li>
@@ -99,9 +110,9 @@
             eiusmod tempor incididunt ut labore et
           </p>
           <a class="hero-header__button-icon" href="#about">
-            <svg  class="hero-icon">
+            <svg class="hero-icon">
               <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
-          </svg>
+            </svg>
           </a>
         </div>
       </div>
