--- a/src/sass/components/_btn-menu.scss
+++ b/src/sass/components/_btn-menu.scss
@@ -1,6 +1,6 @@
 /*кнопка меню*/
 .menu-button {
-  display: flex;
+  display: inline-flex;
 
   align-items: center;
   width: 209px;
@@ -10,7 +10,50 @@
   margin-right: auto;
   margin-bottom: 33px;
 
-  /*padding: 10px 43px;*/
+  border-radius: 22px;
+  border: transparent;
+
+  background-color: $white;
+
+  &__wrapper {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &__txt {
+    margin-right: 14px;
+
+    font-family: $secondaryFont;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.3;
+
+    color: $red;
+  }
+
+  &__icon {
+    width: 10px;
+    height: 10px;
+  }
+
+  &:hover,
+  &:focus {
+    color: $whiteBtnHoverBackG;
+  }
+}
+
+.nav-button {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
+  display: flex;
+
+  align-items: center;
+  width: 160px;
+  height: 44px;
+
+  margin-left: auto;
 
   border-radius: 22px;
   border: transparent;
