--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -25,7 +25,7 @@
   }
 }
 
-@media screen and (min-width: $tabletSecondary) {
+@media screen and (min-width: $desktopSecondary) {
   .header-button {
     display: none;
   }
@@ -52,6 +52,13 @@
     height: 100vh;
     padding: 60px 20px;
     background-color: $pinkModalBackG;
+
+    @media screen and (min-width: $tablet) {
+      top: 5%;
+      left: 40%;
+      width: 254px;
+      height: 100vh;
+    }
   }
 
   .mobile-container.is-open {
@@ -59,7 +66,7 @@
   }
 }
 
-@media screen and (max-width: $tabletSecondary) {
+@media screen and (max-width: $desktopSecondary) {
   .mobile-list__link {
     display: flex;
     align-items: center;
@@ -83,4 +90,8 @@
       color: $red;
     }
   }
+}
+
+body.modal-open {
+  overflow: hidden;
 }
