--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,7 +1,7 @@
 <!---advantages-->
 <section class="advantages">
   <div class="container">
-    <h2 class="visually-hidden">Advantages</h2>
+    <h2 class="visually__hidden">Advantages</h2>
     <ul class="advantage-list">
       <li class="advantage-list__item icon-1">
         <h3 class="advantage-list__title">721</h3>
