--- a/src/sass/components/_btn-menu.scss
+++ b/src/sass/components/_btn-menu.scss
@@ -1,6 +1,6 @@
 /*кнопка меню*/
 .menu-button {
-  display: inline-flex;
+  display: flex;
 
   align-items: center;
   width: 209px;
@@ -74,6 +74,9 @@
     line-height: 1.3;
 
     color: $red;
+    @media screen and (min-width: 767px) {
+      margin-right: 12px;
+    }
   }
 
   &__icon {
