--- a/css/index.css
+++ b/css/index.css
@@ -43,9 +43,11 @@
     padding-right: 18px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .container {
-    width: 1200px;
+    width: 1280px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
 
