--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -7,9 +7,11 @@
         <div class="about-section__info">
             <div class="about-section__img-thumb">
             <picture>
-            <source srcset="./images/bigecocow-mobile.png 1x, ./images/bigecocow-mobile@x2.png 2x"
-                media="(min-width: 320px)">
-            <img src="./images/bigecocow-mobile.png" alt="cow" width="280" height="280">
+            <source srcset="./images/bigecocow-desktop.png 1x, ./images/bigecocow-desktop@x2.png 2x" media="(min-width: 1280px)">
+            <source srcset="./images/bigecocow-tablet.png 1x, ./images/bigecocow-tablet@x2.png 2x" media="(min-width: 768px)">
+            <source srcset="./images/bigecocow-mobile.png 1x, ./images/bigecocow-mobile@x2.png 2x" media="(min-width: 320px)">
+            
+            <img src="./images/bigecocow-mobile.png" alt="cow">
         </picture>    
             </div>
         <div class="about-section__main-text">
