--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -11,8 +11,10 @@
         background-image: url(../images/milksplash-mobile@x2.png);
     }
 
-    &__container {
-        max-width: 320px;
+    @include mq (tablet){
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-image:none;
     }
 
     &__titles {
@@ -20,6 +22,9 @@
         width: 200px;
         margin-right: auto;
         margin-left: auto;
+        @include mq (tablet) {
+            width: 100%;
+        }
     }
 
     &__subtitle {
@@ -31,6 +36,10 @@
         text-align: center;
         text-transform: uppercase;
         color: $pink;
+        @include mq (tablet) {
+        font-size: 26px;
+        line-height: 30px;
+        }
     }
 
 
@@ -44,16 +53,29 @@
         letter-spacing: 0.04em;
         text-transform: uppercase;
         color: $red;
+        @include mq (tablet){
+        font-size: 48px;
+        line-height: 55px;
+        margin-bottom: 50px;
+        }
     }
 
     &__info {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        @include mq (tablet){
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        }
     }
 
     &__img-thumb {
         margin-bottom: 40px;
+        @include mq (tablet) {
+         margin-bottom: 0;
+        }
     }
 
     &__text {
@@ -64,6 +86,11 @@
         font-size: 12px;
         line-height: 162%;
         width: 220px;
+        @include mq (tablet) {
+        font-size: 14px;
+        width: 340px;
+        }
+        
     }
 
     &__description {
@@ -75,10 +102,17 @@
         font-size: 12px;
         line-height: 162%;
         color: $grey;
+        @include mq (tablet) {
+        font-size: 14px;
+        width: 340px;
+        }
     }
 
     &__description.paragraph {
         margin-bottom: 20px;
+        @include mq (tablet) {
+        margin-bottom: 40px;
+        }
     }
 
     &__button {
