--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -25,12 +25,19 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.16;
+  letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #ffa5ba;
   @include tablet {
     font-size: 26px;
     line-height: 1.15;
-    letter-spacing: 0.04em;
+  }
+  @include desktop {
+    font-size: 30px;
+    line-height: 1.13;
+    br {
+      content: '';
+    }
   }
 }
 
@@ -45,6 +52,13 @@
   @include tablet {
     font-size: 48px;
     letter-spacing: 0.06em;
+  }
+  @include desktop {
+    br {
+      content: '';
+    }
+    font-size: 58px;
+    line-height: 1.13;
   }
 }
 
@@ -65,6 +79,10 @@
   @include tablet {
     font-size: 14px;
   }
+  @include desktop {
+    font-size: 16px;
+    letter-spacing: 0.02em;
+  }
 }
 
 .footer-list {
@@ -77,6 +95,12 @@
   }
   @include tablet {
     margin-bottom: 12px;
+  }
+  @include desktop {
+    margin-bottom: 16px;
+    &:last-child {
+      margin-bottom: 60px;
+    }
   }
 }
 
@@ -91,6 +115,9 @@
     }
     @include tablet {
       margin-right: 30px;
+    }
+    @include desktop {
+      margin-top: 12px;
     }
   }
 }
