--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,10 +4,16 @@
       <div>
         <ul>
           <li class="footer-list">
-            <b class="footer-text">homemade ice cream<br />made</b>
+            <b class="footer-text"
+              >homemade ice cream<br />
+              made</b
+            >
           </li>
           <li class="footer-list">
-            <a class="footer-logo" href="">with<br />passion</a>
+            <a class="footer-logo" href=""
+              >with<br />
+              passion</a
+            >
           </li>
         </ul>
       </div>
