--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -6,39 +6,31 @@
     padding-bottom: 120px;
   }
 }
-// .visually-hidden {
-//   position: absolute;
-//   white-space: nowrap;
-//   width: 1px;
-//   height: 1px;
-//   overflow: hidden;
-//   border: 0;
-//   padding: 0;
-//   clip: rect(0 0 0 0);
-//   clip-path: inset(50%);
-//   margin: -1px;
-// }
+
 .advantage-list {
+  max-width: 100%;
   @include tablet {
     display: flex;
     margin-left: -22px;
+    justify-content: center;
 
     @include desktop {
-      margin-left: -150px;
+      margin-left: -127px;
+      justify-content: center;
     }
   }
 }
 .advantage-list__item {
   max-width: 230px;
   @include tablet {
-    // max-width: 160px;
+    max-width: 160px;
     width: calc(100% / 3 - 22px);
     margin-left: 22px;
   }
   @include desktop {
-    // max-width: 288px;
-    width: calc(100% / 3 - 150px);
-    margin-left: 150px;
+    max-width: 100%;
+    width: calc(100% / 3 - 127px);
+    margin-left: 127px;
   }
 }
 .advantage-list__item:not(:last-child) {
@@ -72,6 +64,7 @@
 .advantage-list__item::before {
   display: block;
   content: '';
+  width: 100%;
   height: 50px;
   background-size: contain;
   background-repeat: no-repeat;
