--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -17,18 +17,35 @@
     background-image:none;
     }
 
+    @include mq (desktop){
+    background-image: url(../images/milksplash-desktop.png);
+    @include mq (retina) {
+    background-image: url(../images/milksplash-desktop@x2.png);
+    }
+    background-position: center bottom 0;
+    }
+
+    &__container{
+    @include mq (desktop){
+    padding-right: 115px;
+    padding-left: 115px;   
+    }
+    }
+        
+
+
     &__titles {
         text-align: center;
         width: 200px;
         margin-right: auto;
         margin-left: auto;
-        @include mq (tablet) {
-            width: 100%;
+        @include mq (tablet){
+        width: 100%;
         }
     }
 
     &__subtitle {
-        margin-bottom: 15px;
+        margin-bottom: 16px;
         font-family: 'Titan One', sans-serif;
         font-weight: 400;
         font-size: 18px;
@@ -39,6 +56,11 @@
         @include mq (tablet) {
         font-size: 26px;
         line-height: 30px;
+        }
+        @include mq (desktop) {
+        font-size: 30px;
+        line-height: 34px;
+        letter-spacing: 0.04em;
         }
     }
 
@@ -53,17 +75,26 @@
         letter-spacing: 0.04em;
         text-transform: uppercase;
         color: $red;
+
         @include mq (tablet){
         font-size: 48px;
         line-height: 55px;
         margin-bottom: 50px;
         }
+
+        @include mq (desktop){
+        font-size: 58px;
+        line-height: 66px;
+        letter-spacing: 0.06em;
+        margin-bottom: 80px;
+        }  
     }
 
     &__info {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+
         @include mq (tablet){
         flex-direction: row;
         justify-content: space-between;
@@ -73,7 +104,7 @@
 
     &__img-thumb {
         margin-bottom: 40px;
-        @include mq (tablet) {
+        @include mq (tablet){
          margin-bottom: 0;
         }
     }
@@ -86,11 +117,17 @@
         font-size: 12px;
         line-height: 162%;
         width: 220px;
-        @include mq (tablet) {
+        @include mq (tablet){
         font-size: 14px;
         width: 340px;
         }
-        
+        @include mq (desktop){
+        font-size: 16px;
+        line-height: 1.76;
+        letter-spacing: .04em;
+        width: 463px;
+        }
+                
     }
 
     &__description {
@@ -105,6 +142,12 @@
         @include mq (tablet) {
         font-size: 14px;
         width: 340px;
+        }
+        @include mq (desktop) {
+        line-height: 1.93;
+        letter-spacing: .04em;
+        width: 463px;
+        margin-bottom: 40px;
         }
     }
 
