--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -11,4 +11,8 @@
   @media screen and (min-width: 768px) {
     width: 768px;
   }
+
+  @media screen and (min-width: 1280px) {
+    width: 1280px;
+  }
 }
