--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -22,7 +22,7 @@
         <p class="about-section__description">
         Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
         imperdiet placerat.
-        Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, <br>
+        Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
         tincidunt.
         </p>
 
