--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -40,32 +40,34 @@
         </button>
 
         <!--мобільне мєню-->
-        <div class="mobile-container is-open" id="nav-container" data-menu>
-          <button class="menu-button" type="submit">
-            <span class="menu-button__wrapper">
-              <span class="menu-button__txt">Buy now</span>
-              <svg class="menu-button__icon">
-                <use href="./images/icon/svg-all.svg#icon-btn-arrow"></use>
-              </svg>
-            </span>
-          </button>
-          <ul class="mobile-list">
-            <li class="mobile-list__item">
-              <a class="mobile-list__link" href="./index.html">Home</a>
-            </li>
-            <li class="mobile-list__item">
-              <a class="mobile-list__link" href="">About us</a>
-            </li>
-            <li class="mobile-list__item">
-              <a class="mobile-list__link" href="#contacts">How it’s made?</a>
-            </li>
-            <li class="mobile-list__item">
-              <a class="mobile-list__link" href="#contacts">Our products</a>
-            </li>
-            <li class="mobile-list__item">
-              <a class="mobile-list__link" href="#contacts">Contact</a>
-            </li>
-          </ul>
+        <div class="mobile-overlay is-open" data-menu>
+          <div class="mobile-container" id="nav-container">
+            <button class="menu-button" type="submit">
+              <span class="menu-button__wrapper">
+                <span class="menu-button__txt">Buy now</span>
+                <svg class="menu-button__icon">
+                  <use href="./images/icon/svg-all.svg#icon-btn-arrow"></use>
+                </svg>
+              </span>
+            </button>
+            <ul class="mobile-list">
+              <li class="mobile-list__item">
+                <a class="mobile-list__link" href="./index.html">Home</a>
+              </li>
+              <li class="mobile-list__item">
+                <a class="mobile-list__link" href="">About us</a>
+              </li>
+              <li class="mobile-list__item">
+                <a class="mobile-list__link" href="#contacts">How it’s made?</a>
+              </li>
+              <li class="mobile-list__item">
+                <a class="mobile-list__link" href="#contacts">Our products</a>
+              </li>
+              <li class="mobile-list__item">
+                <a class="mobile-list__link" href="#contacts">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
       <div class="hero">
