--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -9,19 +9,19 @@
   background-color: transparent;
 
   & &__menu {
-    display: block;
+    opacity: 0;
   }
 
   & &__cross {
-    display: none;
+    opacity: 1;
   }
 
   &.is-active &__menu {
-    display: none;
+    opacity: 1;
   }
 
   &.is-active &__cross {
-    display: block;
+    opacity: 0;
   }
 }
 
@@ -43,20 +43,46 @@
 }
 
 @media screen and (max-width: $desktopSecondary) {
+  .mobile-overlay {
+    position: fixed;
+
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+
+    background-color: rgba(154, 159, 170, 0.3);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+
+    transform: translatex(100%);
+    visibility: hidden;
+    pointer-events: none;
+    transition: transform 200ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &.is-open {
+      transform: translatex(0);
+      visibility: visible;
+      pointer-events: initial;
+    }
+  }
+}
+
+@media screen and (max-width: $desktopSecondary) {
   .mobile-container {
     position: fixed;
     z-index: 20;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 60px 20px;
     background-color: $pinkModalBackG;
 
     @media screen and (min-width: $tablet) {
-      top: 5%;
+      top: 4%;
       left: 40%;
-      width: 254px;
+      width: 275px;
       height: 100vh;
     }
   }
