--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,8 +1,13 @@
 .customer-reviews {
   padding-top: 80px;
   & > .container {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0 20px;
+    @media screen and (min-width: 768px) {
+      padding: 0 74px;
+    }
+    @media screen and (min-width: 1200px) {
+      padding: 0 123px;
+    }
   }
 }
 
@@ -38,12 +43,21 @@
     width: 54px;
     height: 40px;
   }
+  @media screen and (min-width: 768px) {
+    margin-top: 20px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 16px;
+  }
 }
 
 .wrap__text {
   padding: 43px 58px 26px 65px;
   background: $greyLightBackG;
   margin-bottom: 36px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-bottom: 24px;
+  }
 }
 
 .review__text {
@@ -86,6 +100,9 @@
     background-size: contain;
     width: 32px;
     height: 4px;
+    @media screen and (min-width: 1200px) {
+      left: calc(100vw / 2);
+    }
   }
 }
 
@@ -94,13 +111,20 @@
   flex-direction: row;
   justify-content: space-around;
 
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    li {
+      margin-right: 18px;
+    }
+  }
+
   button {
     border: 0;
     font-size: 0;
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    background-color: #D9D9D9;
+    background-color: #d9d9d9;
   }
 }
 
@@ -108,8 +132,3 @@
   background: url(/src/images/review.png);
   border-radius: 0%;
 }
-
-
-
-
-
