--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -24,12 +24,12 @@
   max-width: 230px;
   @include tablet {
     max-width: 160px;
-    width: calc(100% / 3 - 22px);
+    flex-basis: calc(100% / 3 - 22px);
     margin-left: 22px;
   }
   @include desktop {
     max-width: 100%;
-    width: calc(100% / 3 - 128px);
+    flex-basis: calc(100% / 3 - 128px);
     margin-left: 128px;
   }
 }
