--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -3,8 +3,11 @@
     <ul class="review__list">
       <li class="review__item">
         <img
-          srcset="./images/matvij.png 1x, ./images/matvij-2x.png 2x"
-          src="./images/matvij.png"
+          srcset="
+            ./images/photos-customers/matvij.png    1x,
+            ./images/photos-customers/matvij-2x.png 2x
+          "
+          src="./images/photos-customers/matvij.png"
           alt="Photo Matvij"
           width="85"
           height="85"
@@ -26,10 +29,10 @@
       <li class="review__item">
         <img
           srcset="
-            ./images/zhyhanov-serhii.png    1x,
-            ./images/zhyhanov-serhii-2x.png 2x
+            ./images/photos-customers/zhyhanov-serhii.png    1x,
+            ./images/photos-customers/zhyhanov-serhii-2x.png 2x
           "
-          src="./images/zhyhanov-serhii.png"
+          src="./images/photos-customers/zhyhanov-serhii.png"
           alt="Photo Serhii"
           width="85"
           height="85"
@@ -49,8 +52,11 @@
       </li>
       <li class="review__item">
         <img
-          srcset="./images/anna.png 1x, ./images/anna-2x.png 2x"
-          src="./images/anna.png"
+          srcset="
+            ./images/photos-customers/anna.png    1x,
+            ./images/photos-customers/anna-2x.png 2x
+          "
+          src="./images/photos-customers/anna.png"
           alt="Photo Anna"
           width="85"
           height="85"
@@ -70,8 +76,11 @@
       </li>
       <li class="review__item">
         <img
-          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
-          src="./images/yana.png"
+          srcset="
+            ./images/photos-customers/yana.png    1x,
+            ./images/photos-customers/yana-2x.png 2x
+          "
+          src="./images/photos-customers/yana.png"
           alt="Photo Yana"
           width="85"
           height="85"
@@ -90,8 +99,11 @@
       </li>
       <li class="review__item">
         <img
-          srcset="./images/valerian.png 1x, ./images/valerian-2x.png 2x"
-          src="./images/valerian.png"
+          srcset="
+            ./images/photos-customers/valerian.png    1x,
+            ./images/photos-customers/valerian-2x.png 2x
+          "
+          src="./images/photos-customers/valerian.png"
           alt="Photo Valerian"
           width="85"
           height="85"
@@ -110,8 +122,11 @@
       </li>
       <li class="review__item">
         <img
-          srcset="./images/vadym.png 1x, ./images/vadym-2x.png 2x"
-          src="./images/vadym.png"
+          srcset="
+            ./images/photos-customers/vadym.png    1x,
+            ./images/photos-customers/vadym-2x.png 2x
+          "
+          src="./images/photos-customers/vadym.png"
           alt="Photo Vadym"
           width="85"
           height="85"
@@ -131,8 +146,11 @@
       </li>
       <li class="review__item">
         <img
-          srcset="./images/aliona.png 1x, ./images/aliona-2x.png 2x"
-          src="./images/aliona.png"
+          srcset="
+            ./images/photos-customers/aliona.png    1x,
+            ./images/photos-customers/aliona-2x.png 2x
+          "
+          src="./images/photos-customers/aliona.png"
           alt="Photo Alona"
           width="85"
           height="85"
@@ -152,8 +170,11 @@
       </li>
       <li class="review__item">
         <img
-          srcset="./images/sergey.png 1x, ./images/sergey-2x.png 2x"
-          src="./images/sergey.png"
+          srcset="
+            ./images/photos-customers/sergey.png    1x,
+            ./images/photos-customers/sergey-2x.png 2x
+          "
+          src="./images/photos-customers/sergey.png"
           alt="Photo Sergey"
           width="85"
           height="85"
@@ -172,8 +193,11 @@
       </li>
       <li class="review__item">
         <img
-          srcset="./images/denis.png 1x, ./images/denis-2x.png 2x"
-          src="./images/denis.png"
+          srcset="
+            ./images/photos-customers/denis.png    1x,
+            ./images/photos-customers/denis-2x.png 2x
+          "
+          src="./images/photos-customers/denis.png"
           alt="Photo Denis"
           width="85"
           height="85"
@@ -192,10 +216,10 @@
       <li class="review__item">
         <img
           srcset="
-            ./images/serhii-donetsk.png    1x,
-            ./images/serhii-donetsk-2x.png 2x
+            ./images/photos-customers/serhii-donetsk.png    1x,
+            ./images/photos-customers/serhii-donetsk-2x.png 2x
           "
-          src="./images/serhii-donetsk.png"
+          src="./images/photos-customers/serhii-donetsk.png"
           alt="Photo Serhii"
           width="85"
           height="85"
@@ -215,8 +239,11 @@
       </li>
       <li class="review__item">
         <img
-          srcset="./images/ivan.png 1x, ./images/ivan-2x.png 2x"
-          src="./images/ivan.png"
+          srcset="
+            ./images/photos-customers/ivan.png    1x,
+            ./images/photos-customers/ivan-2x.png 2x
+          "
+          src="./images/photos-customers/ivan.png"
           alt="Photo Ivan"
           width="85"
           height="85"
