--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -28,7 +28,7 @@
 
 .review__desc {
   margin-top: 32px;
-  max-width: 100vw;
+  // xmax-width: 100vw;
   height: auto;
   &::before {
     content: '';
@@ -45,6 +45,11 @@
   }
   @media screen and (min-width: 768px) {
     margin-top: 20px;
+    &::before {
+      content: '';
+      top: 130px;
+      left: 65px;
+    }
   }
   @media screen and (min-width: 1200px) {
     margin-top: 16px;
@@ -100,8 +105,14 @@
     background-size: contain;
     width: 32px;
     height: 4px;
+    @media screen and (min-width: 480px) {
+      left: 208px;
+    }
+    @media screen and (min-width: 768px) {
+      left: 296px;
+    }
     @media screen and (min-width: 1200px) {
-      left: calc(100vw / 2);
+      left: 500px;
     }
   }
 }
