--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -202,6 +202,119 @@
     //     fill: $white;
     // }
 
+}
+
+// Модальне вікно about
+/* ----------------Modal content----------------*/
+
+.backdrop {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background: rgba(255, 165, 186, 0.2);
+
+    opacity: 1;
+    transition: opacity $cubic;
+
+    overflow-y: scroll;
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.backdrop.is-hidden .about-modal {
+    transform: translate(-50%, -50%) scale(0.9);
+}
+
+.about-modal {
+
+    position: absolute;
+    width: 90%;
+    max-height: 95vh;
+    left: 50%;
+    top: 50%;
+    padding: 30px;
+    background-color: $white;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 1px rgb(0 0 0 / 14%), 0 2px 1px rgb(0 0 0 / 20%);
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform $cubic;
+    @include mq (tablet) {
+        width: 550px;
+    }
+    @include mq (desktop) {
+        width: 700px;
+    }
+
+    &__close-button {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        right: 3%;
+        top: 3%;
+
+        cursor: pointer;
+
+        background-color: $white;
+        border: none;
+
+        transition: fill $cubic;
+    }
+    &__close-button{
+        fill: $redBtnHoverBackG;
+    }
+    &__close-button:hover,
+    &__close-button:focus {
+        fill: $white;
+        border-radius: 50px;
+        background-color: $redBtnHoverBackG;
+    }
 
 
+
+    &__title{
+        font-size: 24px;
+        color: $red;
+        font-family: 'Titan One', sans-serif;
+        font-weight: 400;
+        text-align: center;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        margin-bottom: 15px;
+        @include mq (tablet) {
+            font-size: 36px;
+        }
+        @include mq (desktop) {
+            font-size: 56px;
+        }
+    }
+    &__text{
+        text-align: center;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.58;
+        color: $grey;
+        margin-bottom: 15px;
+    @include mq (tablet){
+    font-size: 16px;
+    }
+    @include mq (desktop){
+    font-size: 18px;
+    } 
+    }
+    
 }
