--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -41,7 +41,7 @@
 
               <div class="contacts-wraper">
                 <div class="contacts-list">
-                  <div class="contacts-compani-food">FOODTRUCK
+                  <div class="contacts-compani-food">FOOD TRUCK
                   </div>
                   <div class="contacts-city">Los Angeles
                   </div>
@@ -119,56 +119,55 @@
 
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            <button type="button" class="modal-close" data-modal-close>X
+            <button type="button" class="modal-close" data-modal-close>
+              <svg class="backdrop-close-icon" width="18" height="18">
+                <use href="./partials/images svg/close.svg#icon-close"></use>
+              </svg>
             </button>
-          
-           <p class="backdrop__title">Оставьте свои данные, мы вам перезвоним</p>
 
-                <form class="modal-form">
-                    <div class="modal-form__field">
-                        <label for="user-name" class="modal-form__label">Имя</label>
-                        <div class="modal-form__wrap">
-                            <input type="text" name="user-name" class="modal-form__input" placeholder="" required
-                                id="user-name" />
-    
-                        </div>
-                    </div>
+            <p class="backdrop__title">Fill out the form below and we'll call you</p>
 
-                    <div class="modal-form__field">
-                        <label for="user-tel" class="modal-form__label">Телефон</label>
-                        <div class="modal-form__wrap">
-                            <input type="tel" name="user-tel" class="modal-form__input" placeholder="" required
-                                id="user-tel" />
-                          
-                        </div>
-                    </div>
+            <form class="modal-form">
+              <div class="modal-form__field">
+                <label for="user-name" class="modal-form__label">Full name</label>
+                <div class="modal-form__wrap">
+                  <input type="text" name="user-name" class="modal-form__input" placeholder="" required
+                    id="user-name" />
 
-                    <div class="modal-form__field">
-                        <label for="user-email" class="modal-form__label">Почта</label>
-                        <div class="modal-form__wrap">
-                            <input type="email" name="user-email" class="modal-form__input" placeholder=""
-                                id="user-email" />
-                           
-                        </div>
-                    </div>
-
-                    <div class="modal-form__field">
-                        <label for="user-text" class="modal-form__label">Комментарий</label>
-                        <textarea name="user-text" id="user-text" class="modal-form__text"
-                            placeholder="Введите текст"></textarea>
-                    </div>
-                    <div class="modal-form__field">
-                        <input type="checkbox" class="modal-form__check " id="modal-check"
-                            name="modal-check" />
-                        <label for="modal-check" class="modal-form__note">
-                        
-                            Соглашаюсь с рассылкой и принимаю <a href="#" class="modal-form__link"> Условия договора</a>
-                        </label>
-                    </div>
-                    <div class="modal-form__button">
-                        <button type="submit" class="modal-form__send">Отправить</button>
-                    </div>
-                </form>
                 </div>
+              </div>
+
+              <div class="modal-form__field">
+                <label for="user-tel" class="modal-form__label">Phone number</label>
+                <div class="modal-form__wrap">
+                  <input type="tel" name="user-tel" class="modal-form__input" placeholder="" required id="user-tel" />
+
+                </div>
+              </div>
+
+              <div class="modal-form__field">
+                <label for="user-email" class="modal-form__label">E-mail</label>
+                <div class="modal-form__wrap">
+                  <input type="email" name="user-email" class="modal-form__input" placeholder="" id="user-email" />
+
+                </div>
+              </div>
+
+              <div class="modal-form__field">
+                <label for="user-text" class="modal-form__label">Message</label>
+                <textarea name="user-text" id="user-text" class="modal-form__text" placeholder="Type here"></textarea>
+              </div>
+              <div class="modal-form__field">
+                <input type="checkbox" class="modal-form__check " id="modal-check" name="modal-check" />
+                <label for="modal-check" class="modal-form__note">
+
+                  I agree to receive the newsletter and to the<a href="#" class="modal-form__link"> Privacy Policy</a>
+                </label>
+              </div>
+              <div class="modal-form__button">
+                <button type="submit" class="modal-form__send">Отправить</button>
+              </div>
+            </form>
+          </div>
         </div>
         <script src="./sass/js.modal/modal.js"></script>
