--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -82,9 +82,21 @@
   font-size: 12px;
   line-height: 186%;
 
-  @media screen and (min-width:1280px) {
+  @media screen and (max-width:767px) {
+    font-size: 12px;
+    line-height: 22px
+  }
+
+  @media screen and (min-width:768px) {
     font-size: 16px;
     line-height: 186%;
+    width: 73px;
+    height: 28px;
+  }
+
+  @media screen and (min-width:1280px) {
+    width: 138px;
+    height: 28px;
   }
 }
 
@@ -107,9 +119,21 @@
   font-size: 12px;
   line-height: 186%;
 
+  @media screen and (max-width:767px) {
+    font-size: 12px;
+    line-height: 22px
+  }
+
   @media screen and (min-width:768px) {
     font-size: 16px;
     line-height: 186%;
+    width: 138px;
+    height: 28px;
+  }
+
+  @media screen and (min-width:1280px) {
+    width: 138px;
+    height: 28px;
   }
 }
 
@@ -166,6 +190,10 @@
 
   margin-bottom: 24px;
   margin-top: 24px;
+
+  @media screen and (min-width:768px) {
+    margin-bottom: 32px;
+  }
 
 }
 
@@ -230,7 +258,11 @@
   @media screen and (min-width:768px) {
     display: flex;
     justify-content: center;
+    margin-top: 40px;
+  }
 
+  @media screen and (min-width:1280px) {
+    margin-top: 60px;
   }
 }
 
@@ -383,7 +415,7 @@
   transform: rotate(360deg) translate(-50%, -50%) scale(1);
   padding: 40px;
 
-  background-color: #fab4ff;
+  background-color: #FFF5F6;
   border-radius: 15px;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
 
@@ -405,16 +437,22 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  width: 30px;
-  height: 30px;
-  border: 1px solid #735dc6;
+  width: 32px;
+  height: 32px;
+  border: 1px solid #000000;
   border-radius: 50%;
   background-color: transparent;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover {
-  color: #c7133e;
+.backdrop-close-icon {
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    fill: #FFA5BA;
+  }
 }
 
 .is-hidden {
@@ -432,7 +470,7 @@
   letter-spacing: 0.03em;
   margin-bottom: 12px;
 
-  color: #702cd9;
+  color: #000000
 }
 
 .modal-form__field {
@@ -446,7 +484,7 @@
   margin-bottom: 4px;
   display: block;
 
-  color: #6538e0;
+  color: #000000;
 }
 
 .modal-form__wrap {
@@ -496,7 +534,7 @@
   // align-items: center;
   // justify-content: space-evenly;
 
-  color: #723993;
+  color: #000000;
 
   @media screen and (max-width:1199px) {
     font-size: 12px;
@@ -536,9 +574,9 @@
 .modal-form__send {
   min-width: 200px;
   height: 50px;
-  border-radius: 4px;
+  border-radius: 22px;
   border: 1px solid transparent;
-  background: #702cd9;
+  background: #d41342;
   color: #FFFFFF;
 
   font-weight: 700;
