--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -25,6 +25,7 @@ $greyLine: #e5e5e5;
 
 // время перехода
 $cubic: cubic-bezier(0.4, 0, 0.2, 1);
+$timeChange: 250ms;
 
 //fonts
 $mainFont: 'Titan One', cursive;
