--- a/src/sass/_hero-header.scss
+++ b/src/sass/_hero-header.scss
@@ -15,6 +15,10 @@
   @media screen and (min-width: 768px) {
     margin-right: 293px;
   }
+
+  @media screen and (min-width: 1170px) {
+    margin-right: 175px;
+  }
 }
 .hero-header__circle {
   position: relative;
