--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -9,23 +9,23 @@
   background-color: transparent;
 
   & &__menu {
-    opacity: 0;
+    opacity: 1;
   }
 
   & &__cross {
-    opacity: 1;
+    opacity: 0;
   }
 
   &.is-active &__menu {
-    opacity: 1;
+    opacity: 0;
   }
 
   &.is-active &__cross {
-    opacity: 0;
+    opacity: 1;
   }
 }
 
-@media screen and (min-width: $desktopSecondary) {
+@media screen and (min-width: 1070px) {
   .header-button {
     display: none;
   }
@@ -36,7 +36,7 @@
   fill: $red;
 }
 
-@media screen and (min-width: $desktopSecondary) {
+@media screen and (min-width: 1070px) {
   .mobile-container {
     display: none;
   }
@@ -118,6 +118,6 @@
   }
 }
 
-.is-assign {
+body.is-assign {
   overflow: hidden;
 }
