--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -28,4 +28,8 @@
 //components
 @import './components/mobile-menu';
 @import './components/btn-menu';
+@import './components/header-desktop';
 @import './gallery';
+
+//heder modal
+@import './components/form-header/module';
