Edits after team-lead remarks
Виправив проблему з іконкою модального вікна при 320px, задав transition для закриття та відкриття, а також зафіксував модальне вікно у відкритому стані.

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -171,10 +171,11 @@
         min-width: 176px;
     }
 
-    // &__button:hover,
-    // &__button:hover {
-    //     background-color: $red;
-    // }
+    &__button:hover,
+    &__button:hover {
+        transition: background-color 250ms $cubic;
+        background-color: $red;
+    }
 
     &__button-text {
         font-family: 'DM Sans', sans-serif;
@@ -187,26 +188,27 @@
         color: $red;
     }
 
-    // &__button-text:hover,
-    // &__button-text:focus {
-    //     color: $white;
-    // }
+    &__button-text:hover,
+    &__button-text:focus {
+
+        transition: color 250ms $cubic;
+        color: $white;
+    }
 
     &__button-icon {
         fill: currentColor;
         margin-left: 14px;
     }
 
-    // &__button-icon:hover,
-    // &__button-icon:focus {
-    //     fill: $white;
-    // }
+    &__button-icon:hover,
+    &__button-icon:focus {
+        transition: fill 250ms $cubic;
+        fill: $white;
+    }
 
 }
 
 // Модальне вікно about
-/* ----------------Modal content----------------*/
-
 .backdrop {
     position: fixed;
     z-index: 1;
@@ -218,9 +220,7 @@
     background: rgba(255, 165, 186, 0.2);
 
     opacity: 1;
-    transition: opacity $cubic;
-
-    overflow-y: scroll;
+    transition: opacity 250ms $cubic;
 }
 
 .backdrop.is-hidden {
@@ -233,7 +233,6 @@
 }
 
 .about-modal {
-
     position: absolute;
     width: 90%;
     max-height: 95vh;
@@ -242,14 +241,14 @@
     padding: 30px;
     background-color: $white;
     box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 1px rgb(0 0 0 / 14%), 0 2px 1px rgb(0 0 0 / 20%);
-    border-radius: 24px;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: auto;
     transform: translate(-50%, -50%) scale(1);
-    transition: transform $cubic;
+    transition: transform 250ms $cubic;
     @include mq (tablet) {
         width: 550px;
     }
@@ -272,22 +271,26 @@
         background-color: $white;
         border: none;
 
-        transition: fill $cubic;
-    }
-    &__close-button{
+        transition: fill 250ms $cubic;
         fill: $redBtnHoverBackG;
+
+        @include mq (desktop) {
+        width: 50px;
+        height: 50px;
+        }
     }
     &__close-button:hover,
     &__close-button:focus {
         fill: $white;
         border-radius: 50px;
         background-color: $redBtnHoverBackG;
+        transition: background-color 250ms $cubic;
     }
 
 
 
     &__title{
-        font-size: 24px;
+        font-size: 22px;
         color: $red;
         font-family: 'Titan One', sans-serif;
         font-weight: 400;
