--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -192,7 +192,7 @@
     &__button-text:focus {
 
         transition: color 250ms $cubic;
-        color: $white;
+        color: $red;
     }
 
     &__button-icon {
