added transition for button

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -287,11 +287,22 @@
   cursor: pointer;
   background-color: $whiteBtnHoverBackG;
   color: $redBtnHoverBackG;
+   
+    
+  transition-property: background-color, transform;
+  transition-duration: 300ms;
+  transition-timing-function: linear;
+  transition-delay: 0;
+
+
     &:hover,
     &:focus{
         background-color: $greyBackG;
+        transform: rotate(360deg);
     }
+    
 }
+
 
 
 
