added transform  for button

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -8,8 +8,21 @@
             <li class="products__item">
                 <div class="products__wrapper products__wrapper--fist">
                     <h3 class="products__subtitle">Ice cream</h3>
-                    <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                        <button type="button" class="products__description">
+                    <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
+                        <span id="dots">... </span>
+                        <span id="more">
+                            Tempora minus error atque odio sequi iste commodi sint, ab, vel, totam eveniet corrupti sit. Minima aut sit iure explicabo deleniti, 
+                        voluptas laborum quos perferendis? Culpa suscipit nesciunt eveniet quaerat quasi magnam quidem iusto, tempore, 
+                        beatae neque ipsa ullam mollitia quia quo obcaecati dicta minima aspernatur? Totam, non, tempora asperiores 
+                        voluptatibus praesentium doloremque rerum ad impedit quasi quos quaerat, nulla animi laboriosam eaque? 
+                        Quasi tempora ad minus eveniet ipsam praesentium quo alias ipsa nobis. Itaque dignissimos quo sint nostrum deleniti. 
+                        Veritatis ad ducimus dolores dicta adipisci in dolorum eveniet dolor illum aliquam, praesentium fugit beatae aperiam. 
+                        Laborum voluptates assumenda totam distinctio officiis ullam illo maxime dolorem nulla facere, 
+                        culpa quibusdam aliquid dolores saepe corporis veniam quas aliquam iusto est labore architecto ad dolor, minima nobis? 
+                        </span>
+                    </p>
+                        <button type="button" class="products__description" id="btn">
                             <svg  class="products__btn-icon" width="40px" height="40px">
                                 <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
                             </svg>
