--- a/src/sass/components/_btn-menu.scss
+++ b/src/sass/components/_btn-menu.scss
@@ -8,12 +8,18 @@
 
   margin-left: auto;
   margin-right: auto;
+
   margin-bottom: 33px;
+  margin-top: 18px;
 
   border-radius: 22px;
   border: transparent;
 
   background-color: $white;
+
+  @media screen and (min-width: 769px) and (max-width: 1070px) {
+    margin-left: 60px;
+  }
 
   &__wrapper {
     margin-left: auto;
